--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,47 @@
-*{
-  margin: 0;
-  padding: 0;
-  font-family: arial;
-}
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.diapositivas {display: none}
+img {vertical-align: middle;}
 
-
-/* Add a black background color to the top navigation */
+/* Encabezado Menu */
 .menu {
   background-color: black;
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
+header {
+  background: url()
+}
+
 .menu a {
   float: left;
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 15px 16px;
   text-decoration: none;
   font-size: 17px;
 }
 
-/* Change the color of links on hover */
+
+
+
 .menu a:hover {
   background-color: #ddd;
   color: black;
 }
 
-/* Add an active class to highlight the current page */
+
 .menu a.active {
   background-color: red;
   color: white;
 }
 
-/* Hide the link that should open and close the topnav on small screens */
 .menu .icon {
   display: none;
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+/* Menu responsive ocultar barra*/
 @media screen and (max-width: 600px) {
   .menu a:not(:first-child) {display: none;}
   .menu a.icon {
@@ -48,7 +50,7 @@
   }
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+/*  responsive icono con javascript */
 @media screen and (max-width: 600px) {
   .menu.responsive {position: relative;}
   .menu.responsive a.icon {
@@ -56,6 +58,7 @@
     right: 0;
     top: 0;
   }
+
   .menu.responsive a {
     float: none;
     display: block;
@@ -63,97 +66,93 @@
   }
 }
 
-/*Contenido*/
+/*container*/
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: 100px auto auto auto;
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.diapositivas {display: none}
+img {vertical-align: middle;}
+
+/* Secuencia de Imagenes */
+.container {
+max-width: 1000px;
+position: relative;
+margin: auto;
+padding-top: 2%;
 }
 
-/* Hide the images by default */
-.mySlides {
-
-}
-
-/* Next & previous buttons */
+/* botones de siguiente y atras */
 .prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+cursor: pointer;
+position: absolute;
+top: 50%;
+width: auto;
+padding: 16px;
+margin-top: -22px;
+color: white;
+font-weight: bold;
+font-size: 18px;
+transition: 0.6s ease;
+border-radius: 0 3px 3px 0;
+user-select: none;
 }
 
-/* Position the "next button" to the right */
+/* pocision de boton siguiente a la derecha */
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+right: 0;
+border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
+/* Hover de color negro al boton izquierda y derecha */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
 
-/* Number text (1/3 etc) */
+/* Color del texto de numeros*/
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+color: black;
+font-size: 12px;
+padding: 8px 12px;
+position: absolute;
+top: 0;
 }
 
-/* The dots/bullets/indicators */
+/* Puntos Indicador*/
 .dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+cursor: pointer;
+height: 15px;
+width: 15px;
+margin: 0 2px;
+background-color: #bbb;
+border-radius: 50%;
+display: inline-block;
+transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+background-color: #717171;
 }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+/* Animacion al pasar */
+.quitar {
+-webkit-animation-name: fade;
+-webkit-animation-duration: 1.5s;
+animation-name: fade;
+animation-duration: 1.5s;
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+from {opacity: .4}
+to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+from {opacity: .4}
+to {opacity: 1}
+}
+
+/* Media query botones responsive*/
+@media only screen and (max-width: 300px) {
+.prev, .next,.text {font-size: 11px}
 }
